# MLOps_template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile.init  README.md  pyproject.toml
