[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
black = "^23.7.0"  # Update to match the version from the pre-commit config
flake8 = "^6.1.0"  # Add flake8 to match the version from the pre-commit config
isort = "^5.12.0"  # Add isort to match the version from the pre-commit config
interrogate = "^1.5.0"  # Add interrogate to match the version from the pre-commit config

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true
